--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="column">
                     <h2>2. About Me <em>!</em></h2>
-                    <p class="home">I'm Sid Antoine, an established author and editor. Here are some <a href="pages/samples.html">examples</a> of my work.</p>
+                    <p class="home">I'm Sid Antoine, an established author and editor. Here are some <a href="samples.html">examples</a> of my work.</p>
 
                     <h2>4. Support Me <em>!</em></h2>
                     <p class="home">If you'd like to support me outside of my work, please consider buying my children's science fiction adventure novel, <a href="https://a.co/d/9zarsEh">The Prodigies</a>.  It's currently available as a Kindle ebook. Paperback copies are available in America and Canada. International availability starts <strong>this week</strong>!</p>
