--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora" />
         <link rel="stylesheet" types="text/css" href="style.css" />
-        <title>Gentle Lake !</title>
+        <title>Antoine Essay Editing Service</title>
     </head>
     <body>
         <div id="home-page" class="page">
